--- a/PlannerAssignment/Mvvm/Views/StartPage.xaml
+++ b/PlannerAssignment/Mvvm/Views/StartPage.xaml
@@ -14,24 +14,24 @@
 
             <HorizontalStackLayout Margin="0,10,0,0">
                 <Label Text="Current Location: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"  />
-                <Editor FontSize="Medium" VerticalOptions="Center" WidthRequest="200" />
+                <Editor  x:Name="locationEditor" FontSize="Medium" VerticalOptions="Center" WidthRequest="200" />
             </HorizontalStackLayout>
 
             <HorizontalStackLayout >
                 <Label Text="Use Current Location " FontSize="Small" FontAttributes="Bold" VerticalOptions="Center" />
-                <Switch x:Name="UseCurrentLocationSwitch" HorizontalOptions="Fill" />
+                <Switch x:Name="locationSwitch" HorizontalOptions="Fill" />
             </HorizontalStackLayout>
 
             <HorizontalStackLayout Margin="0,20,0,0">
                 <Label Text="Station of Arrival: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" />
-                <Editor FontSize="Medium" VerticalOptions="Center" WidthRequest="200"/>
+                <Editor x:Name="stationEditor" FontSize="Medium" VerticalOptions="Center" WidthRequest="200"/>
             </HorizontalStackLayout>
         </VerticalStackLayout>
 
         <Button Grid.Row="1" VerticalOptions="Start" 
              x:Name="SearchBtn"
              Text="Search for possible trains" 
-             Clicked="OnCounterClicked"
+             Clicked="OnSearchClicked"
              FontAttributes="Bold"
              Margin="20"
              HorizontalOptions="Fill" />
