--- a/PlannerAssignment/Mvvm/Views/StartPage.xaml
+++ b/PlannerAssignment/Mvvm/Views/StartPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlannerAssignment.MainPage"
+             Shell.BackgroundColor="LimeGreen"
+             Shell.TitleColor="White"
              Title="Train Planner">
     <Grid>
         <Grid.RowDefinitions>
