--- a/PlannerAssignment/Mvvm/Views/ResultPage.xaml
+++ b/PlannerAssignment/Mvvm/Views/ResultPage.xaml
@@ -12,11 +12,15 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <RefreshView IsRefreshing="{Binding IsRefreshing}"
-    Command="{Binding FetchDataCommand}">
-        <Grid>
-            <Label x:Name="emptyLabel" Text="No items found. Refresh to show!" FontSize="16" HorizontalOptions="Center" Margin="10" IsVisible="{Binding DepHasItems, Converter={StaticResource BooleanNegationConverter}}" />
-            <CollectionView x:Name="collectionView" ItemsLayout="VerticalList" IsGrouped="False" SelectionMode="Single" ItemsSource="{Binding Departures}">
+    <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding FetchDataCommand}">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition  Height="*"/>
+                <RowDefinition  Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Label x:Name="emptyLabel" Grid.Row="0" Text="No items found. Refresh to show!" FontSize="16" HorizontalOptions="Center" Margin="10" IsVisible="{Binding DepHasItems, Converter={StaticResource BooleanNegationConverter}}" />
+            <CollectionView Grid.Row="0" x:Name="collectionView" ItemsLayout="VerticalList" IsGrouped="False" SelectionMode="Single" ItemsSource="{Binding Departures}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame  Margin="10">
@@ -28,18 +32,22 @@
                                     <Grid>
                                         <Image x:Name="nsImage" Source="ns_logo.png" WidthRequest="80" HeightRequest="100" ></Image>
                                     </Grid>
-                                    <VerticalStackLayout Margin="30,0,0,0">
-                                        <HorizontalStackLayout>
+                                    <VerticalStackLayout Margin="20,0,0,0">
+                                        <HorizontalStackLayout Margin="0,10,0,0">
                                             <Label Text="Name: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" />
-                                            <Label Text="{Binding name}" FontSize="Medium" VerticalOptions="Center" />
-                                        </HorizontalStackLayout>
-                                        <HorizontalStackLayout>
-                                            <Label Text="Direction: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" />
-                                            <Label Text="{Binding direction}" FontSize="Medium" VerticalOptions="Center" />
+                                            <Label Text="{Binding name}" FontSize="Medium" VerticalOptions="Center"/>
                                         </HorizontalStackLayout>
                                         <HorizontalStackLayout Margin="0,10,0,0">
-                                            <Label Text="departureStatus: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
-                                            <Label Text="{Binding departureStatus}" FontSize="Small" VerticalOptions="Center" />
+                                            <Label Text="Direction: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" />
+                                            <Label Text="{Binding direction}" FontSize="Medium" VerticalOptions="Center"/>
+                                        </HorizontalStackLayout>
+                                        <HorizontalStackLayout Margin="0,10,0,0">
+                                            <Label Text="Status: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
+                                            <Label Text="{Binding status}" FontSize="Medium" VerticalOptions="Center"/>
+                                        </HorizontalStackLayout>
+                                        <HorizontalStackLayout Margin="0,10,0,0">
+                                            <Label Text="Date: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
+                                            <Label Text="{Binding plannedDateTime}" FontSize="Medium" VerticalOptions="Center" />
                                         </HorizontalStackLayout>
                                     </VerticalStackLayout>
                                 </HorizontalStackLayout>
@@ -48,6 +56,26 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
+            <StackLayout Grid.Row="1" Margin="10" Orientation="Horizontal" Spacing="10">
+                <Button 
+                    x:Name="DepBtn"
+                    Text="Departures List" 
+                    TextColor="Black"
+                    WidthRequest="150"
+                    Clicked="OnDepBtnClicked"
+                    FontAttributes="Bold"
+                    HorizontalOptions="StartAndExpand"
+                    Background="LimeGreen"/>
+                <Button 
+                    x:Name="ArrBtn"
+                    Text="Arrivals List" 
+                    TextColor="Black"
+                    WidthRequest="150"
+                    Clicked="OnArrBtnClicked"
+                    FontAttributes="Bold"
+                    HorizontalOptions="EndAndExpand"
+                    Background="LimeGreen"/>
+            </StackLayout>
         </Grid>
     </RefreshView>
 </ContentPage>
