--- a/PlannerAssignment/Mvvm/Views/TrainPages/ArrivalsPage.xaml
+++ b/PlannerAssignment/Mvvm/Views/TrainPages/ArrivalsPage.xaml
@@ -24,7 +24,7 @@
             <CollectionView Grid.Row="0" x:Name="collectionView" ItemsLayout="VerticalList" IsGrouped="False" SelectionMode="Single" ItemsSource="{Binding Arrivals}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame  Margin="10">
+                        <Frame  Margin="5">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="collectionView_SelectionChanged" />
                             </Frame.GestureRecognizers>
@@ -67,6 +67,12 @@
                     FontAttributes="Bold"
                     HorizontalOptions="StartAndExpand"
                     Background="LimeGreen"/>
+                <Button  Text="♥"
+                    Clicked="OnFavoriteClicked" 
+                    BackgroundColor="LimeGreen"
+                    WidthRequest="50" 
+                    HeightRequest="50" 
+                    CornerRadius="25"/>
                 <Button 
                     x:Name="ArrBtn"
                     Text="Arrivals List" 
