--- a/PlannerAssignment/Mvvm/Views/FavoritePage.xaml
+++ b/PlannerAssignment/Mvvm/Views/FavoritePage.xaml
@@ -20,7 +20,7 @@
             </Grid.RowDefinitions>
 
             <Label x:Name="emptyLabel" Grid.Row="0" Text="No items found. Refresh to show!" FontSize="16" HorizontalOptions="Center" Margin="10" IsVisible="{Binding DepHasItems, Converter={StaticResource BooleanNegationConverter}}" />
-            <CollectionView Grid.Row="0" x:Name="collectionView" ItemsLayout="VerticalList" IsGrouped="False" SelectionMode="Single" ItemsSource="{Binding Departures}">
+            <CollectionView Grid.Row="0" x:Name="collectionView" ItemsLayout="VerticalList" IsGrouped="False" SelectionMode="Single" ItemsSource="{Binding Stations}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame  Margin="5">
@@ -34,8 +34,8 @@
                                     </Grid>
                                     <VerticalStackLayout Margin="20,0,0,0">
                                         <HorizontalStackLayout Margin="0,10,0,0">
-                                            <Label Text="Name: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center" />
-                                            <Label Text="{Binding name}" FontSize="Medium" VerticalOptions="Center"/>
+                                            <Label Text="Name: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
+                                            <Label Text="{Binding Long}" FontSize="Medium" VerticalOptions="Center"/>
                                         </HorizontalStackLayout>
                                     </VerticalStackLayout>
                                 </HorizontalStackLayout>
