--- a/PlannerAssignment/Mvvm/Views/DetailPages/ArrivalsDetail.xaml
+++ b/PlannerAssignment/Mvvm/Views/DetailPages/ArrivalsDetail.xaml
@@ -36,6 +36,10 @@
                                 <Label Text="Date: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
                                 <Label Text="{Binding SelectedTrain.plannedDateTime}" FontSize="Medium" VerticalOptions="Center" />
                             </HorizontalStackLayout>
+                            <HorizontalStackLayout Margin="0,10,0,0">
+                                <Label Text="Track: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
+                                <Label Text="{Binding SelectedTrain.plannedTrack}" FontSize="Medium" VerticalOptions="Center" />
+                            </HorizontalStackLayout>
                         </VerticalStackLayout>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
