--- a/PlannerAssignment/Mvvm/Views/DetailPages/DeparturesDetail.xaml
+++ b/PlannerAssignment/Mvvm/Views/DetailPages/DeparturesDetail.xaml
@@ -35,7 +35,11 @@
                             <Label Text="Date: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
                                 <Label Text="{Binding SelectedTrain.plannedDateTime}" FontSize="Medium" VerticalOptions="Center" />
                         </HorizontalStackLayout>
-                    </VerticalStackLayout>
+                            <HorizontalStackLayout Margin="0,10,0,0">
+                                <Label Text="Track: " FontSize="Medium" FontAttributes="Bold" VerticalOptions="Center"/>
+                                <Label Text="{Binding SelectedTrain.plannedTrack}" FontSize="Medium" VerticalOptions="Center" />
+                            </HorizontalStackLayout>
+                        </VerticalStackLayout>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </Border>
